--- a/Css/style.css
+++ b/Css/style.css
@@ -64,6 +64,10 @@ body {
     box-shadow: 0 0 30px #4b0082, 0 0 2px #F44D9B inset;
 }
 
+.color-button .active {
+    box-shadow: 0 0 30px #4b0082, 0 0 2px #F44D9B inset;
+}
+
 /* Styling untuk tombol warna */
 .options .color-button {
     display: flex;
@@ -142,6 +146,25 @@ body {
     height: 23.3px;
     width: 23.3px;
     border: 0.5px solid #333333; /* Border grid item */
+}
+
+.multimedia-options {
+    display: flex;
+    justify-content: center;
+}
+
+.multimedia-options button {
+    background-color: transparent;
+    margin: 8px 40px; /* Margin atas-bawah 8px, kiri-kanan 40px */
+    width: 120px;
+    height: auto;
+    border-radius: 4px;
+    border-color: #4b0082;
+    padding: 8px;
+    cursor: pointer;
+    outline: 0 !important;
+    transition: all 0.3s ease-in;
+    font-size: 24px;
 }
 
 /* Styling footer */
